--- a/MoviesApp/Pages/Movies/Details.cshtml
+++ b/MoviesApp/Pages/Movies/Details.cshtml
@@ -45,13 +45,35 @@
             @Html.DisplayNameFor(model => model.Movie.ReleaseDate)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Movie.ReleaseDate)
+            @Html.DisplayFor(model => model.Movie.ReleaseDateFormatted)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Movie.Director)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Movie.Director.Id)
+            @Html.DisplayFor(model => model.Movie.Director.Name)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Movie.Actors)
+        </dt>
+        <dd class="col-sm-10">
+            <table class="table">
+                <tr>
+                    <th>Name</th>
+                    <th>Age</th>
+                </tr>
+                @foreach (var item in Model.Movie.Actors)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Person.Name)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Person.Age)
+                        </td>
+                    </tr>
+                }
+            </table>
         </dd>
     </dl>
 </div>
