Create GraphQL schema, query, mutation

--- a/MoviesApp/Pages/Shared/_Layout.cshtml
+++ b/MoviesApp/Pages/Shared/_Layout.cshtml
@@ -25,7 +25,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Movies/Index">Movies</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/People/Index">People</a>
+                            <a class="nav-link text-dark" href="/People/Index">People</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="/ui/playground">GraphQL Playground</a>
                         </li>
                     </ul>
                 </div>
